--- a/404.html
+++ b/404.html
@@ -74,7 +74,7 @@
 	<div class="wrap">
 
 		
-		<a href="/" class="header__title">
+		<a href="//" class="header__title">
 			ExCALIBUR H&ES
 		</a>
 		
