--- a/_pages/funding.html
+++ b/_pages/funding.html
@@ -74,7 +74,7 @@
 	<div class="wrap">
 
 		
-		<a href="/" class="header__title">
+		<a href="//" class="header__title">
 			ExCALIBUR H&ES
 		</a>
 		
@@ -164,9 +164,9 @@
 
 ## Applying for support from the programme
 
-![Case for support template](images/skeleton.png){:style="float: right; width: 250px; height: 330px;"}(docs/ExCALIBUR-Hardware-and-Enabling-Software-programme-Case-for-support-template.docx)
+![Case for support template](images/skeleton.png){:style="float: right; width: 250px; height: 330px;"}
 
-We have put together a <a href="docs/ExCALIBUR-Hardware-and-Enabling-Software-programme-Case-for-support-template.docx">skeleton case for support template</a> seting out the key information that should be included in a case for support, e.g.
+We have put together a <a href="https://github.com/ukri-excalibur/ukri-excalibur.github.io/raw/master/docs/ExCALIBUR-Hardware-and-Enabling-Software-programme-Case-for-support-template.docx">skeleton case for support template</a> seting out the key information that should be included in a case for support, e.g.
 * Justification of resources
 * Linkage to other ExCALIBUR projects
 * Description and costs
