--- a/funding.html
+++ b/funding.html
@@ -74,7 +74,7 @@
 	<div class="wrap">
 
 		
-		<a href="/" class="header__title">
+		<a href="//" class="header__title">
 			ExCALIBUR H&ES
 		</a>
 		
@@ -189,9 +189,9 @@
 
 <h2 id="applying-for-support-from-the-programme">Applying for support from the programme</h2>
 
-<p><img src="images/skeleton.png" alt="Case for support template" style="float: right; width: 250px; height: 330px;" />(docs/ExCALIBUR-Hardware-and-Enabling-Software-programme-Case-for-support-template.docx)</p>
+<p><img src="images/skeleton.png" alt="Case for support template" style="float: right; width: 250px; height: 330px;" /></p>
 
-<p>We have put together a <a href="docs/ExCALIBUR-Hardware-and-Enabling-Software-programme-Case-for-support-template.docx">skeleton case for support template</a> seting out the key information that should be included in a case for support, e.g.</p>
+<p>We have put together a <a href="https://github.com/ukri-excalibur/ukri-excalibur.github.io/raw/master/docs/ExCALIBUR-Hardware-and-Enabling-Software-programme-Case-for-support-template.docx">skeleton case for support template</a> seting out the key information that should be included in a case for support, e.g.</p>
 <ul>
   <li>Justification of resources</li>
   <li>Linkage to other ExCALIBUR projects</li>
