--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -20,18 +20,18 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>ExCALIBUR overview – ExCALIBUR H&ES</title>
-	<meta name="description" content="A brief overview of the ExCALIBUR initiative">
+	<title>ExCALIBUR H&ES FAQ – ExCALIBUR H&ES</title>
+	<meta name="description" content="ExCALIBUR Hardware and Enabling Software Frequently Asked Questions">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="ExCALIBUR overview – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="A brief overview of the ExCALIBUR initiative">
+	<meta name="twitter:title" content="ExCALIBUR H&ES FAQ – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="ExCALIBUR Hardware and Enabling Software Frequently Asked Questions">
 	<meta name="twitter:image:src" content="https://ukri-excalibur.github.io/images/feature.jpg">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="ExCALIBUR overview – ExCALIBUR H&ES" />
-	<meta property="og:description" content="A brief overview of the ExCALIBUR initiative" />
+	<meta property="og:title" content="ExCALIBUR H&ES FAQ – ExCALIBUR H&ES" />
+	<meta property="og:description" content="ExCALIBUR Hardware and Enabling Software Frequently Asked Questions" />
 	<meta property="og:image" content="https://ukri-excalibur.github.io/images/feature.jpg" />
 
 	
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="https://ukri-excalibur.github.io" data-page-url="/excalibur">
+<body class="loading ajax-loading" data-site-url="https://ukri-excalibur.github.io" data-page-url="/_pages/faq.html">
 
 
 	<header class="header">
@@ -126,7 +126,7 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="ExCALIBUR overview – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="ExCALIBUR H&ES FAQ – ExCALIBUR H&ES">
 
 			<section class="hero hero--single">
 
@@ -136,8 +136,8 @@
 
 	<div class="wrap">
 
-		<h1>ExCALIBUR overview</h1>
-		<p>A brief overview of the ExCALIBUR initiative</p>
+		<h1>ExCALIBUR H&ES FAQ</h1>
+		<p>ExCALIBUR Hardware and Enabling Software Frequently Asked Questions</p>
 
 	</div>
 
@@ -149,68 +149,59 @@
 
 		<article class="single-post">
 
-			<h2 id="exascale-computing-algorithms-and-infrastructures-benefitting-uk-research">Exascale Computing ALgorithms and Infrastructures Benefitting UK Research</h2>
+			## Frequently Asked Questions
 
-<h2 id="excalibur-overview">ExCALIBUR overview</h2>
+### Who can apply for funding from ExCALIBUR H&ES?
 
-<ul>
-  <li>£45.7M initiative from the UK government’s <a href="https://www.ukri.org/research/themes-and-programmes/strategic-priorities-fund/">Strategic Priorities Fund</a> (SPF)</li>
-  <li>Led by the <a href="http://metoffice.gov.uk">Met Office</a>, <a href="https://www.ukri.org">UK Research and Innovation</a> (UKRI) with the <a href="https://www.gov.uk/government/organisations/uk-atomic-energy-authority">UK Atomic Energy Authority</a> (UKAEA)</li>
-  <li>The UK’s Exascale programme for the next 5 years (started November 2019)</li>
-  <li>Focus on software and algorithms</li>
-  <li>Funding breakdown:
-    <ul>
-      <li><a href="http://epsrc.ukri.org">EPSRC</a> - £22.8M</li>
-      <li>Met Office / UKAEA - £17.0M</li>
-      <li>Hardware and Enabling Software (H&amp;ES) - £4.5M</li>
-    </ul>
-  </li>
-</ul>
+We expect that proposals will be led by UK universities or public sector research establishments.
 
-<p><em>This website covers the activities of the Hardware and Enabling Software strand of ExCALIBUR.</em></p>
+### Who can be a partner on an ExCALIBUR H&ES case for support?
 
-<h2 id="excalibur-planned-activities">ExCALIBUR planned activities</h2>
+There are no restrictions on who you can partner with, however funds can normally only be disbursed to UK based organisations. We are particularly keen to see collaborations with ExCALIBUR working groups and technology providers.
 
-<ul>
-  <li>Knowledge integration</li>
-  <li>High priority use cases</li>
-  <li>Emerging requirements for HPC algorithms</li>
-  <li>Cross-cutting research</li>
-  <li>Proof-of-concept hardware (H&amp;ES)</li>
-</ul>
+### What kind of collaborations do you anticipate?
 
-<p><em>The Hardware and Enabling Software programme is particularly focussed on novel hardware and software testbeds.</em></p>
+We expect that ExCALIBUR H&ES projects will generally include Research Software Engineering (RSE) effort, and that the people in these roles will work closely with the ExCALIBUR working groups that aim to make use of the testbeds. We are also keen to see deep engagement with technology providers on next generation hardware and software such as pre-release and pre-commercial hardware and developer tools.
 
-<h2 id="excalibur-intended-benefits">ExCALIBUR intended benefits</h2>
+### What can I request funding for in my case for support?
 
-<ul>
-  <li>Increased science productivity</li>
-  <li>Transformational change in capability</li>
-  <li>Increased skills base of interdisciplinary <a href="https://society-rse.org">Research Software Engineers</a> (RSEs)</li>
-</ul>
+ExCALIBUR H&ES is only able to fund capital expenditure, however this can include bought-out staff time to work on your project, e.g. RSE or Research Operations (ResOps) effort.
 
-<p><em>Each project that ExCALIBUR H&amp;ES supports will embed RSE expertise.</em></p>
+### What is the timeframe for my grant if my case for support is successful?
 
-<h2 id="excalibur-pillars">ExCALIBUR pillars</h2>
+Grants will be awarded for the following financial (tax) year, so for example awards from the September 2020 call will go live in April 2021.
 
-<ul>
-  <li><strong>Separation of Concerns</strong>: the maths of a problem is separate from its implementation</li>
-  <li><strong>Co-design</strong>: holistic, collaborative system design by mathematicians, domain scientists, computer scientists and industrial partners</li>
-  <li><strong>Data Science</strong>: new workflows to manage and analyse vast volumes of simulation data</li>
-  <li><strong>Investing in People</strong>: interdisciplinary Research Software Engineer (RSE) career development driven by forward-looking scientific software design</li>
-</ul>
+### Who will have access to the testbeds that ExCALIBUR H&ES creates?
 
-<h2 id="excalibur-briefing-webinar">ExCALIBUR briefing webinar</h2>
+ExCALIBUR projects will have priority access. Testbeds will also be made available to the wider UKRI community and UK public sector research establishments.
 
-<p>EPSRC’s Richard Gunn and ExCALIBUR H&amp;ES joint lead Revd Dr Jeremy Yates presented a <a href="https://www.youtube.com/watch?v=h0DtVqGzOaU">webinar on the ExCALIBUR initiative</a> as part of the <a href="https://www.archer2.ac.uk/training/">Archer2 training</a> programme.</p>
+### What are the expectations around testbed availability?
 
-<iframe src="https://www.youtube.com/embed/h0DtVqGzOaU" width="640" height="360" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+ExCALIBUR H&ES testbeds will be highly experimental and we do not expect them to be operated on a service footing.
 
-<h2 id="find-out-more">Find out more</h2>
+### What will the resource allocation process be for ExCALIBUR H&ES testbeds?
 
-<p>Find out more at the <a href="https://www.metoffice.gov.uk/research/approach/collaboration/spf/excalibur">ExCALIBUR website</a>, hosted by the <a href="http://metoffice.gov.uk">Met Office</a>.</p>
+This will depend to a large extent on the nature and scope of the testbed projects, and may vary from one testbed to another.
 
-<p><a href="https://www.metoffice.gov.uk/research/approach/collaboration/spf/excalibur" class="button button--large">ExCALIBUR website</a></p>
+### How will people use the testbeds?
+
+In most cases we expect testbeds to be remotely accessible via ssh and similar protocols, using SAFE and/or UK Access Management Federation authentication. 
+
+### What if I am aiming to work on something which is highly sensitive and need the details to be kept secret?
+
+We expect that some projects will be wholly or partly sensitive, e.g. including pre-commercial components for which non-disclosure agreements are likely to apply. Please contact the ExCALIBUR H&ES [programme office](mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry) to discuss, if required.
+
+### What support will ExCALIBUR H&ES be able to provide for my project?
+
+As part of the ExCALIBUR H&ES programme we will be working with technology partners and funded projects to provide training opportunities for the research community. ExCALIBUR H&ES also has some dedicated Research Software Engineering effort, which is focussed on benchmarking at Exascale. 
+
+## Get in touch
+
+If you have any queries or require further information please do get in touch with the Hardware & Enabling Software programme co-directors Prof Simon McIntosh-Smith (University of Bristol) and Revd Dr Jeremy Yates (University College London), and our Project Manager Martin Hamilton (UCL) via our [programme office](mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry). We are happy to discuss and provide formative feedback on draft proposals before they are submitted.
+
+<a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry" class="button button--large">Get in touch</a>
+
+
 
 
 		</article>
