--- a/faq.html
+++ b/faq.html
@@ -20,18 +20,18 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>ExCALIBUR H&ES Calls – ExCALIBUR H&ES</title>
-	<meta name="description" content="Funding opportunities for H&amp;ES testbed projects">
+	<title>ExCALIBUR H&ES FAQ – ExCALIBUR H&ES</title>
+	<meta name="description" content="ExCALIBUR Hardware and Enabling Software Frequently Asked Questions">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="ExCALIBUR H&ES Calls – ExCALIBUR H&ES">
-	<meta name="twitter:description" content="Funding opportunities for H&amp;ES testbed projects">
+	<meta name="twitter:title" content="ExCALIBUR H&ES FAQ – ExCALIBUR H&ES">
+	<meta name="twitter:description" content="ExCALIBUR Hardware and Enabling Software Frequently Asked Questions">
 	<meta name="twitter:image:src" content="https://ukri-excalibur.github.io/images/feature.jpg">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="ExCALIBUR H&ES Calls – ExCALIBUR H&ES" />
-	<meta property="og:description" content="Funding opportunities for H&amp;ES testbed projects" />
+	<meta property="og:title" content="ExCALIBUR H&ES FAQ – ExCALIBUR H&ES" />
+	<meta property="og:description" content="ExCALIBUR Hardware and Enabling Software Frequently Asked Questions" />
 	<meta property="og:image" content="https://ukri-excalibur.github.io/images/feature.jpg" />
 
 	
@@ -66,7 +66,7 @@
 </head>
 
 
-<body class="loading ajax-loading" data-site-url="https://ukri-excalibur.github.io" data-page-url="/funding">
+<body class="loading ajax-loading" data-site-url="https://ukri-excalibur.github.io" data-page-url="/faq">
 
 
 	<header class="header">
@@ -126,7 +126,7 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="ExCALIBUR H&ES Calls – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="ExCALIBUR H&ES FAQ – ExCALIBUR H&ES">
 
 			<section class="hero hero--single">
 
@@ -136,8 +136,8 @@
 
 	<div class="wrap">
 
-		<h1>ExCALIBUR H&ES Calls</h1>
-		<p>Funding opportunities for H&ES testbed projects</p>
+		<h1>ExCALIBUR H&ES FAQ</h1>
+		<p>ExCALIBUR Hardware and Enabling Software Frequently Asked Questions</p>
 
 	</div>
 
@@ -149,63 +149,53 @@
 
 		<article class="single-post">
 
-			<h2 id="excalibur-hes-open-call---autumn-2020">ExCALIBUR H&amp;ES Open Call - Autumn 2020</h2>
+			<h2 id="frequently-asked-questions">Frequently Asked Questions</h2>
 
-<ul>
-  <li>As part of the ExCALIBUR initiative, UKRI are investing £4.5m over four years to create and evaluate testbeds for novel pre-Exascale architectures and software systems, in a co-design partnership with HPC vendors and the UK research community.</li>
-  <li>This call for proposals is for the £1m budget allocated for 2021-2022.</li>
-  <li>We expect to fund around 4-5 projects each year.</li>
-  <li>Projects will work closely with ExCALIBUR software working groups supported by UKRI, UKAEA and the Met Office.</li>
-</ul>
+<h3 id="who-can-apply-for-funding-from-excalibur-hes">Who can apply for funding from ExCALIBUR H&amp;ES?</h3>
 
-<h2 id="timeline">Timeline</h2>
+<p>We expect that proposals will be led by UK universities or public sector research establishments.</p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Stage</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><strong>14th September 2020</strong></td>
-      <td>The call formally opens</td>
-    </tr>
-    <tr>
-      <td><strong>19th October 2020</strong></td>
-      <td>Final date to submit proposals</td>
-    </tr>
-    <tr>
-      <td> </td>
-      <td><em>Proposals will be peer reviewed and any clarifications sought</em></td>
-    </tr>
-    <tr>
-      <td><strong>30th November 2020</strong></td>
-      <td>Outcomes communicated to applicants</td>
-    </tr>
-    <tr>
-      <td><strong>6th April 2021</strong></td>
-      <td>Grants are now active and work can begin</td>
-    </tr>
-  </tbody>
-</table>
+<h3 id="who-can-be-a-partner-on-an-excalibur-hes-case-for-support">Who can be a partner on an ExCALIBUR H&amp;ES case for support?</h3>
 
-<h2 id="applying-for-support-from-the-programme">Applying for support from the programme</h2>
+<p>There are no restrictions on who you can partner with, however funds can normally only be disbursed to UK based organisations. We are particularly keen to see collaborations with ExCALIBUR working groups and technology providers.</p>
 
-<p><img src="images/skeleton.png" alt="Case for support template" style="float: right; width: 250px; height: 330px;" /></p>
+<h3 id="what-kind-of-collaborations-do-you-anticipate">What kind of collaborations do you anticipate?</h3>
 
-<p>We have put together a <a href="https://github.com/ukri-excalibur/ukri-excalibur.github.io/raw/master/docs/ExCALIBUR-Hardware-and-Enabling-Software-programme-Case-for-support-template.docx">skeleton case for support template</a> seting out the key information that should be included in a case for support, e.g.</p>
-<ul>
-  <li>Justification of resources</li>
-  <li>Linkage to other ExCALIBUR projects</li>
-  <li>Description and costs</li>
-  <li>Work packages</li>
-  <li>Milestones and outputs</li>
-  <li>Risk register</li>
-</ul>
+<p>We expect that ExCALIBUR H&amp;ES projects will generally include Research Software Engineering (RSE) effort, and that the people in these roles will work closely with the ExCALIBUR working groups that aim to make use of the testbeds. We are also keen to see deep engagement with technology providers on next generation hardware and software such as pre-release and pre-commercial hardware and developer tools.</p>
 
-<h2 id="contact-us">Contact us</h2>
+<h3 id="what-can-i-request-funding-for-in-my-case-for-support">What can I request funding for in my case for support?</h3>
+
+<p>ExCALIBUR H&amp;ES is only able to fund capital expenditure, however this can include bought-out staff time to work on your project, e.g. RSE or Research Operations (ResOps) effort.</p>
+
+<h3 id="what-is-the-timeframe-for-my-grant-if-my-case-for-support-is-successful">What is the timeframe for my grant if my case for support is successful?</h3>
+
+<p>Grants will be awarded for the following financial (tax) year, so for example awards from the September 2020 call will go live in April 2021.</p>
+
+<h3 id="who-will-have-access-to-the-testbeds-that-excalibur-hes-creates">Who will have access to the testbeds that ExCALIBUR H&amp;ES creates?</h3>
+
+<p>ExCALIBUR projects will have priority access. Testbeds will also be made available to the wider UKRI community and UK public sector research establishments.</p>
+
+<h3 id="what-are-the-expectations-around-testbed-availability">What are the expectations around testbed availability?</h3>
+
+<p>ExCALIBUR H&amp;ES testbeds will be highly experimental and we do not expect them to be operated on a service footing.</p>
+
+<h3 id="what-will-the-resource-allocation-process-be-for-excalibur-hes-testbeds">What will the resource allocation process be for ExCALIBUR H&amp;ES testbeds?</h3>
+
+<p>This will depend to a large extent on the nature and scope of the testbed projects, and may vary from one testbed to another.</p>
+
+<h3 id="how-will-people-use-the-testbeds">How will people use the testbeds?</h3>
+
+<p>In most cases we expect testbeds to be remotely accessible via ssh and similar protocols, using SAFE and/or UK Access Management Federation authentication.</p>
+
+<h3 id="what-if-i-am-aiming-to-work-on-something-which-is-highly-sensitive-and-need-the-details-to-be-kept-secret">What if I am aiming to work on something which is highly sensitive and need the details to be kept secret?</h3>
+
+<p>We expect that some projects will be wholly or partly sensitive, e.g. including pre-commercial components for which non-disclosure agreements are likely to apply. Please contact the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry">programme office</a> to discuss, if required.</p>
+
+<h3 id="what-support-will-excalibur-hes-be-able-to-provide-for-my-project">What support will ExCALIBUR H&amp;ES be able to provide for my project?</h3>
+
+<p>As part of the ExCALIBUR H&amp;ES programme we will be working with technology partners and funded projects to provide training opportunities for the research community. ExCALIBUR H&amp;ES also has some dedicated Research Software Engineering effort, which is focussed on benchmarking at Exascale.</p>
+
+<h2 id="get-in-touch">Get in touch</h2>
 
 <p>If you have any queries or require further information please do get in touch with the Hardware &amp; Enabling Software programme co-directors Prof Simon McIntosh-Smith (University of Bristol) and Revd Dr Jeremy Yates (University College London), and our Project Manager Martin Hamilton (UCL) via our <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry">programme office</a>. We are happy to discuss and provide formative feedback on draft proposals before they are submitted.</p>
 
