--- a/_pages/governance.html
+++ b/_pages/governance.html
@@ -20,17 +20,17 @@
 
 	<!-- Page Info -->
 	<link rel="shortcut icon" href="/images/favicon.png">
-	<title>Governance – ExCALIBUR H&ES</title>
+	<title>ExCALIBUR H&ES Governance – ExCALIBUR H&ES</title>
 	<meta name="description" content="Oversight of the ExCALIBUR H&amp;ES programme">
 
 	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Governance – ExCALIBUR H&ES">
+	<meta name="twitter:title" content="ExCALIBUR H&ES Governance – ExCALIBUR H&ES">
 	<meta name="twitter:description" content="Oversight of the ExCALIBUR H&amp;ES programme">
 	<meta name="twitter:image:src" content="https://ukri-excalibur.github.io/images/feature.jpg">
 
 	<!-- Facebook OpenGraph -->
-	<meta property="og:title" content="Governance – ExCALIBUR H&ES" />
+	<meta property="og:title" content="ExCALIBUR H&ES Governance – ExCALIBUR H&ES" />
 	<meta property="og:description" content="Oversight of the ExCALIBUR H&amp;ES programme" />
 	<meta property="og:image" content="https://ukri-excalibur.github.io/images/feature.jpg" />
 
@@ -126,7 +126,7 @@
 	
 	<div class="page">
 
-		<div class="page__content" data-page-title="Governance – ExCALIBUR H&ES">
+		<div class="page__content" data-page-title="ExCALIBUR H&ES Governance – ExCALIBUR H&ES">
 
 			<section class="hero hero--single">
 
@@ -136,7 +136,7 @@
 
 	<div class="wrap">
 
-		<h1>Governance</h1>
+		<h1>ExCALIBUR H&ES Governance</h1>
 		<p>Oversight of the ExCALIBUR H&ES programme</p>
 
 	</div>
