--- a/_pages/funding.html
+++ b/_pages/funding.html
@@ -178,10 +178,12 @@ We have put together a <a href="https://github.com/ukri-excalibur/ukri-excalibur
 * Milestones and outputs
 * Risk register
 
+A [Frequently Asked Questions](/faq) document is available which describes the ExCALIBUR H&ES open call process and provides guidance on scope and eligibility for projects.
+
 
 ## Contact us
 
-If you have any queries or require further information please do get in touch with the Hardware & Enabling Software programme co-directors Prof Simon McIntosh-Smith (University of Bristol) and Revd Dr Jeremy Yates (University College London), and our Project Manager Martin Hamilton (UCL) via our [programme office](mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry). We are happy to discuss and provide formative feedback on draft proposals before they are submitted.
+To submit your case for support, or if you have any queries or require further information, please do get in touch with the Hardware & Enabling Software [programme office](mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry). We are happy to discuss and provide formative feedback on draft proposals before they are submitted. This email address is monitored by programme co-directors Prof Simon McIntosh-Smith (University of Bristol) and Revd Dr Jeremy Yates (University College London), and our Project Manager Martin Hamilton (UCL).
 
 <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry" class="button button--large">Get in touch</a>
 
