--- a/faq.html
+++ b/faq.html
@@ -171,6 +171,22 @@
 
 <p>Grants will be awarded for the following financial (tax) year, so for example awards from the September 2020 call will go live in April 2021.</p>
 
+<h3 id="how-can-i-submit-a-proposal">How can I submit a proposal?</h3>
+
+<p>We will be running a series of open calls through the lifetime of the ExCALIBUR H&amp;ES project. The first of these runs from September 14th 2020 to October 19th 2020. You can only submit a proposal during the open call period</p>
+
+<h3 id="who-do-i-send-my-case-for-support-to">Who do I send my case for support to?</h3>
+
+<p>Please send your completed case for support template to the ExCALIBUR H&amp;ES <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry">programme office</a>. You are welcome to contact the programme office for formative feedback before submission.</p>
+
+<h3 id="what-does-the-review-process-for-submissions-look-like">What does the review process for submissions look like?</h3>
+
+<p>The proposals received during each open call period will be reviewed by an expert panel with academic and industry expertise. You will receive written feedback on your proposal, and may be invited to present your case for support to the panel. You may be invited to revise and resubmit your proposal in response to panel feedback.</p>
+
+<h3 id="how-will-the-excalibur-hes-grant-be-awarded">How will the ExCALIBUR H&amp;ES grant be awarded?</h3>
+
+<p>Grants will be issued through UKRI in the normal manner. At the point where the final project details and budget have been agreed for a successful submission, you will be required to document via Je-S so that a grant letter can be issued.</p>
+
 <h3 id="who-will-have-access-to-the-testbeds-that-excalibur-hes-creates">Who will have access to the testbeds that ExCALIBUR H&amp;ES creates?</h3>
 
 <p>ExCALIBUR projects will have priority access. Testbeds will also be made available to the wider UKRI community and UK public sector research establishments.</p>
