--- a/funding.html
+++ b/funding.html
@@ -205,9 +205,11 @@
   <li>Risk register</li>
 </ul>
 
+<p>A <a href="/faq">Frequently Asked Questions</a> document is available which describes the ExCALIBUR H&amp;ES open call process and provides guidance on scope and eligibility for projects.</p>
+
 <h2 id="contact-us">Contact us</h2>
 
-<p>If you have any queries or require further information please do get in touch with the Hardware &amp; Enabling Software programme co-directors Prof Simon McIntosh-Smith (University of Bristol) and Revd Dr Jeremy Yates (University College London), and our Project Manager Martin Hamilton (UCL) via our <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry">programme office</a>. We are happy to discuss and provide formative feedback on draft proposals before they are submitted.</p>
+<p>To submit your case for support, or if you have any queries or require further information, please do get in touch with the Hardware &amp; Enabling Software <a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry">programme office</a>. We are happy to discuss and provide formative feedback on draft proposals before they are submitted. This email address is monitored by programme co-directors Prof Simon McIntosh-Smith (University of Bristol) and Revd Dr Jeremy Yates (University College London), and our Project Manager Martin Hamilton (UCL).</p>
 
 <p><a href="mailto:excalibur-hes@jiscmail.ac.uk?subject=ExCALIBUR%20HES%20website%20enquiry" class="button button--large">Get in touch</a></p>
 
