--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -173,7 +173,7 @@ Grants will be awarded for the following financial (tax) year, so for example aw
 
 ### How can I submit a proposal?
 
-We will be running a series of open calls through the lifetime of the ExCALIBUR H&ES project. The first of these runs from September 14th 2020 to October 19th 2020. You can only submit a proposal during the open call period
+We will be running a series of open calls through the lifetime of the ExCALIBUR H&ES project. The first of these runs from September 14th 2020 to October 19th 2020. You can only submit a proposal during the open call period.
 
 ### Who do I send my case for support to?
 
