--- a/faq.html
+++ b/faq.html
@@ -173,7 +173,7 @@
 
 <h3 id="how-can-i-submit-a-proposal">How can I submit a proposal?</h3>
 
-<p>We will be running a series of open calls through the lifetime of the ExCALIBUR H&amp;ES project. The first of these runs from September 14th 2020 to October 19th 2020. You can only submit a proposal during the open call period</p>
+<p>We will be running a series of open calls through the lifetime of the ExCALIBUR H&amp;ES project. The first of these runs from September 14th 2020 to October 19th 2020. You can only submit a proposal during the open call period.</p>
 
 <h3 id="who-do-i-send-my-case-for-support-to">Who do I send my case for support to?</h3>
 
