--- a/_pages/excalibur.html
+++ b/_pages/excalibur.html
@@ -195,10 +195,11 @@ EPSRC's Richard Gunn and ExCALIBUR H&ES joint lead Revd Dr Jeremy Yates presente
 
 <iframe src="https://www.youtube.com/embed/h0DtVqGzOaU" width="640" height="360" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-
 ## Find out more
 
 Find out more at the [ExCALIBUR website](https://www.metoffice.gov.uk/research/approach/collaboration/spf/excalibur), hosted by the [Met Office](http://metoffice.gov.uk).
+
+Details of ExCALIBUR working groups are available from UKRI's [Grants on the Web](https://gow.epsrc.ukri.org/NGBOViewPanelROL.aspx?PanelId=1-811FGY&RankingListId=1-816PGO) site.
 
 <a href="https://www.metoffice.gov.uk/research/approach/collaboration/spf/excalibur" class="button button--large">ExCALIBUR website</a>
 
