--- a/excalibur.html
+++ b/excalibur.html
@@ -210,6 +210,8 @@
 
 <p>Find out more at the <a href="https://www.metoffice.gov.uk/research/approach/collaboration/spf/excalibur">ExCALIBUR website</a>, hosted by the <a href="http://metoffice.gov.uk">Met Office</a>.</p>
 
+<p>Details of ExCALIBUR working groups are available from UKRI’s <a href="https://gow.epsrc.ukri.org/NGBOViewPanelROL.aspx?PanelId=1-811FGY&amp;RankingListId=1-816PGO">Grants on the Web</a> site.</p>
+
 <p><a href="https://www.metoffice.gov.uk/research/approach/collaboration/spf/excalibur" class="button button--large">ExCALIBUR website</a></p>
 
 
