--- a/faq.html
+++ b/faq.html
@@ -155,6 +155,18 @@
 
 <p>We expect that proposals will be led by UK universities or public sector research establishments.</p>
 
+<h3 id="what-exactly-is-a-testbed">What exactly is a testbed?</h3>
+
+<p>We are generally expecting testbeds to be a combination of new hardware and software and the people to help ExCALIBUR working groups and the wider research community to exploit them</p>
+
+<h3 id="what-testbeds-has-the-programme-already-supported">What testbeds has the programme already supported?</h3>
+
+<p>Please see our <a href="/testbeds">testbeds page</a> for details of the testbeds that the programme has already supported. We are looking for novel hardware</p>
+
+<h3 id="what-is-excalibur-and-what-are-the-excalibur-working-groups">What is ExCALIBUR and what are the ExCALIBUR working groups?</h3>
+
+<p>Please see our <a href="/excalibur">ExCALIBUR page</a> for more information about the ExCALIBUR initiative. Details of ExCALIBUR working groups are available from UKRI’s <a href="https://gow.epsrc.ukri.org/NGBOViewPanelROL.aspx?PanelId=1-811FGY&amp;RankingListId=1-816PGO">Grants on the Web</a> site.</p>
+
 <h3 id="who-can-be-a-partner-on-an-excalibur-hes-case-for-support">Who can be a partner on an ExCALIBUR H&amp;ES case for support?</h3>
 
 <p>There are no restrictions on who you can partner with, however funds can normally only be disbursed to UK based organisations. We are particularly keen to see collaborations with ExCALIBUR working groups and technology providers.</p>
@@ -181,7 +193,7 @@
 
 <h3 id="what-does-the-review-process-for-submissions-look-like">What does the review process for submissions look like?</h3>
 
-<p>The proposals received during each open call period will be reviewed by an expert panel with academic and industry expertise. You will receive written feedback on your proposal, and may be invited to present your case for support to the panel. You may be invited to revise and resubmit your proposal in response to panel feedback.</p>
+<p>The proposals received during each open call period will be reviewed by an panel with academic and industry expertise. You will receive written feedback on your proposal, and may be invited to present your case for support to the panel. You may be invited to revise and resubmit your proposal in response to panel feedback.</p>
 
 <h3 id="how-will-the-excalibur-hes-grant-be-awarded">How will the ExCALIBUR H&amp;ES grant be awarded?</h3>
 
