--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -157,7 +157,7 @@ We expect that proposals will be led by UK universities or public sector researc
 
 ### What exactly is a testbed?
 
-We are generally expecting testbeds to be a combination of new hardware and software and the people to help ExCALIBUR working groups and the wider research community to exploit them
+We are generally expecting testbeds to be a combination of novel hardware and software and the people to help ExCALIBUR working groups and the wider research community to exploit them.
 
 ### What testbeds has the programme already supported?
 
