--- a/faq.html
+++ b/faq.html
@@ -157,7 +157,7 @@
 
 <h3 id="what-exactly-is-a-testbed">What exactly is a testbed?</h3>
 
-<p>We are generally expecting testbeds to be a combination of new hardware and software and the people to help ExCALIBUR working groups and the wider research community to exploit them</p>
+<p>We are generally expecting testbeds to be a combination of novel hardware and software and the people to help ExCALIBUR working groups and the wider research community to exploit them.</p>
 
 <h3 id="what-testbeds-has-the-programme-already-supported">What testbeds has the programme already supported?</h3>
 
