--- a/_pages/faq.html
+++ b/_pages/faq.html
@@ -161,7 +161,7 @@ We are generally expecting testbeds to be a combination of novel hardware and so
 
 ### What testbeds has the programme already supported?
 
-Please see our [testbeds page](/testbeds) for details of the testbeds that the programme has already supported. We are looking for novel hardware 
+Please see our [testbeds page](/testbeds) for details of the testbeds that the programme has already supported.
 
 ### What is ExCALIBUR and what are the ExCALIBUR working groups?
 
