--- a/faq.html
+++ b/faq.html
@@ -161,7 +161,7 @@
 
 <h3 id="what-testbeds-has-the-programme-already-supported">What testbeds has the programme already supported?</h3>
 
-<p>Please see our <a href="/testbeds">testbeds page</a> for details of the testbeds that the programme has already supported. We are looking for novel hardware</p>
+<p>Please see our <a href="/testbeds">testbeds page</a> for details of the testbeds that the programme has already supported.</p>
 
 <h3 id="what-is-excalibur-and-what-are-the-excalibur-working-groups">What is ExCALIBUR and what are the ExCALIBUR working groups?</h3>
 
